# IceDrive

./: README.md  pyproject.toml
.github/workflows/: lintian.yml
config/: blob.config
icedrive_blob/: __init__.py  app.py  blob.py  delayed_response.py  discovery.py  icedrive.ice
test/: test.py  test_blob.py
tests/: test.py
